Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
11.7(EOL)
-
None
Description
create table t (v vector(1) not null, vector(v)); |
insert into t values (0x31313131); |
flush tables;
|
--error ER_ILLEGAL_PARAMETER_DATA_TYPES2_FOR_OPERATION
|
update t set v = 1; |
drop table t; |
|
11.7 bc32705f46fa93d9700a20c8d439e48e5c352272 |
mysqltest: At line 5: query 'update t set v = 1' failed with wrong errno ER_SQL_DISCOVER_ERROR (1939): 'Engine MyISAM failed to discover table `test`.`t` with 'CREATE TABLE i ( layer tinyint not null, tref varbinary(6), vec blob not null, neighbors blob not null, unique (tref), key (layer)) '', instead of ER_ILLEGAL_PARAMETER_DATA_TYPES2_FOR_OPERATION (4078)... |
Attachments
Issue Links
- is caused by
-
MDEV-34939 vector search in 11.7
-
- Closed
-