MDEV-35769 ER_SQL_DISCOVER_ERROR upon updating vector key column using incorrect value

return as soon as the error status is known.

also, init_from_sql_statement_string() cannot be run if thd->is_error(),
assert it.